--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,14 @@
-html {
-  height: 100%;
-}
-
 body {
   background-color: black;
   box-sizing: border-box;
-  height: 100%;
+  height: 98vh;
 
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 
 .board {
-  border: solid 2px white;
   width: 570px;
   height: 570px;
 
@@ -22,7 +17,45 @@ body {
   grid-template-rows: repeat(3, 1fr);
 }
 
-.cellBtn {
+.board > button {
   background-color: black;
+}
+.btn1 {
   border: solid 1px white;
+  border-left: none;
+  border-top: none;
+}
+.btn4 {
+  border: solid 1px white;
+  border-left: none;
+}
+.btn7 {
+  border: solid 1px white;
+  border-left: none;
+  border-bottom: none;
+}
+.btn3 {
+  border: solid 1px white;
+  border-top: none;
+  border-right: none;
+}
+.btn6 {
+  border: solid 1px white;
+  border-right: none;
+}
+.btn9 {
+  border: solid 1px white;
+  border-right: none;
+  border-bottom: none;
+}
+.btn2 {
+  border: solid 1px white;
+  border-top: none;
+}
+.btn5 {
+  border: solid 1px white;
+}
+.btn8 {
+  border: solid 1px white;
+  border-bottom: none;
 }
