--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,11 @@ body {
   background-color: black;
   border: solid 1px white;
 }
+
+.home {
+  width: 100%;
+  height: 100%;
+  background-color: blueviolet;
+  position: absolute;
+  z-index: 1;
+}
