--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,12 @@ body {
   background-color: black;
   box-sizing: border-box;
   height: 98vh;
+}
+.board-container {
+  width: 100%;
+  height: 100%;
 
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
 }
