--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
 body {
   background-color: black;
   box-sizing: border-box;
-  height: 98vh;
+  height: 100vh;
 }
+
+* {
+  color: white;
+}
+
 .board-container {
   width: 100%;
   height: 100%;
@@ -29,7 +34,11 @@ body {
 .home {
   width: 100%;
   height: 100%;
-  background-color: blueviolet;
+  background-color: black;
   position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 1;
 }
