--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,36 @@
 body {
-  background-color: black;
+  /* background-color: black; */
   box-sizing: border-box;
   height: 100vh;
 }
 
-* {
+/* * {
   color: white;
-}
+} */
 
-.board-container {
+/* .board-container {
   width: 100%;
   height: 100%;
 
   display: grid;
   justify-content: center;
   align-items: center;
-}
+}*/
 
 .board {
-  width: 570px;
-  height: 570px;
+  width: 540px;
+  height: auto;
 
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  display: flex;
+  flex-direction: column;
 }
 
-.board > button {
+/* .board > button {
   background-color: black;
   border: solid 1px white;
-}
+} */
 
-.home {
+/* .home {
   width: 100%;
   height: 100%;
   background-color: black;
@@ -41,4 +40,21 @@ body {
   right: 0;
   bottom: 0;
   z-index: 1;
+} */
+
+.column {
+  background: #9e9e9e;
+  border: black 1px solid;
+  width: 180px;
+  height: 180px;
+  margin: 0 auto;
+  margin-top: 0;
+  cursor: pointer;
+  float: left;
+}
+
+.row {
+  display: block;
+  float: left;
+  width: 100%;
 }
