--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,22 @@ body {
   /* background-color: black; */
   box-sizing: border-box;
   height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 
 /* * {
   color: white;
 } */
 
-/* .board-container {
+.board-container {
   width: 100%;
   height: 100%;
 
   display: grid;
   justify-content: center;
   align-items: center;
-}*/
+}
 
 .board {
   width: 540px;
