--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
+
 body {
   /* background-color: black; */
   box-sizing: border-box;
@@ -45,6 +47,8 @@ body {
 } */
 
 .column {
+  font-family: "Architects Daughter", cursive;
+
   background: #9e9e9e;
   border: black 1px solid;
   width: 180px;
@@ -53,7 +57,7 @@ body {
   margin-top: 0;
   cursor: pointer;
   float: left;
-  font-size: 40px;
+  font-size: 50px;
 }
 
 .row {
