--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa&display=swap");
 
 body {
   /* background-color: black; */
@@ -23,6 +23,7 @@ body {
 
 .board-container > h2 {
   margin: 0;
+  font-family: "Comfortaa", cursive;
 }
 
 .board {
@@ -51,7 +52,7 @@ body {
 } */
 
 .column {
-  font-family: "Architects Daughter", cursive;
+  font-family: "Comfortaa", cursive;
 
   background: #9e9e9e;
   border: black 1px solid;
@@ -62,6 +63,7 @@ body {
   cursor: pointer;
   float: left;
   font-size: 50px;
+  font-weight: 700;
 }
 
 .row {
