--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa&display=swap");
 
 body {
-  /* background-color: black; */
+  background-color: black;
   box-sizing: border-box;
   height: 100vh;
   padding: 0;
   margin: 0;
 }
 
-/* * {
+* {
   color: white;
-} */
+}
 
 .board-container {
   width: 100%;
