--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa&display=swap");
 
 body {
-  background-color: black;
+  background-color: #1c2225;
   box-sizing: border-box;
   height: 100vh;
   padding: 0;
@@ -53,9 +53,8 @@ body {
 
 .column {
   font-family: "Comfortaa", cursive;
-
-  background: #9e9e9e;
-  border: black 1px solid;
+  border: #727472 1px solid;
+  background: #1c2225;
   width: 180px;
   height: 180px;
   margin: 0 auto;
