--- a/styles.css
+++ b/styles.css
@@ -34,17 +34,17 @@ body {
   flex-direction: column;
 }
 
-/* .home {
+.home {
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: #1c2225;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 1;
-} */
+}
 
 .column {
   font-family: "Comfortaa", cursive;
