--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,9 @@ body {
   right: 0;
   bottom: 0;
   z-index: 1;
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
 
 #play {
