--- a/styles.css
+++ b/styles.css
@@ -50,13 +50,17 @@ body {
   align-items: center;
 }
 
+h1 {
+  font-size: 90px;
+}
+
 #play {
   background: #1c2225;
   border: #727472 solid 2px;
   border-radius: 5px;
   width: 340px;
   height: 200px;
-  font-size: 150px;
+  font-size: 100px;
 }
 
 .column {
