--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,9 @@ body {
   bottom: 0;
   z-index: 1;
   display: grid;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
+  grid-auto-rows: 0.4fr 0.3fr;
 }
 
 h1 {
