--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,10 @@ h1 {
   color: #fbff12;
 }
 
+#play:hover {
+  cursor: pointer;
+}
+
 .column {
   font-family: "Comfortaa", cursive;
   border: #727472 1px solid;
