--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ body {
   font-family: "Comfortaa", cursive;
 }
 
+.board-container h2 span {
+  font-family: "Comfortaa", cursive;
+}
+
 .board {
   width: 540px;
   height: auto;
@@ -105,7 +109,6 @@ h1 {
 }
 
 .column {
-  font-family: "Comfortaa", cursive;
   border: #727472 1px solid;
   background: #1c2225;
   width: 180px;
