--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,8 @@ body {
   justify-items: center;
   align-items: center;
   grid-auto-rows: 0.4fr 0.3fr;
+
+  display: none;
 }
 
 h1 {
@@ -125,4 +127,19 @@ h1 {
   display: block;
   float: left;
   width: 100%;
+}
+
+#return {
+  font-family: "Comfortaa", cursive;
+  background-color: #1c2225;
+  width: 180px;
+  height: 35px;
+  border: #727472 solid 2px;
+  border-radius: 4px;
+
+  transition: box-shadow 300ms linear;
+}
+
+#return:hover {
+  box-shadow: #41ead4 -5px 5px;
 }
