--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,10 @@ body {
   height: 100%;
 
   display: grid;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
+
+  grid-auto-rows: 0.6fr;
 }
 
 .board-container > h2 {
