Add hover effect to all cells

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,10 @@ h1 {
   transition: color 350ms linear;
 }
 
+.column:hover {
+  border: white solid 1px;
+}
+
 .row {
   display: block;
   float: left;
