--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,37 @@ h1 {
 #return:hover {
   box-shadow: #41ead4 -5px 5px;
 }
+
+#gameover {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: 300ms ease-in-out;
+  border: 1px solid #727472;
+  height: 260px;
+  z-index: 10;
+  min-width: 100%;
+  background: #1c2225;
+}
+
+#overlay {
+  position: fixed;
+  opacity: 1;
+  transition: 200ms ease-in-out;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
+
+#overlay.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+#gameover.active {
+  transform: scale(1);
+}
