--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,9 @@ h1 {
   z-index: 10;
   min-width: 100%;
   background: #1c2225;
+
+  display: grid;
+  justify-items: center;
 }
 
 #gameover > * {
