--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
-  transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out 550ms;
   border: 1px solid #727472;
   height: 260px;
   z-index: 10;
@@ -176,7 +176,7 @@ h1 {
 #overlay {
   position: fixed;
   opacity: 0;
-  transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out 550ms;
   top: 0;
   left: 0;
   right: 0;
