--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
   display: grid;
   justify-items: center;
   align-items: center;
-  grid-auto-rows: 0.4fr 0.3fr;
+  grid-auto-rows: 0.4fr 0.1fr 0.3fr;
 }
 
 h1 {
